--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
   /*background-color: #aeaeae;*/
   font-family: 'Montserrat', sans-serif;
-  font-size: 1em;
+  font-size: 1rem;
 }
 .cards {
   width: 720px;
@@ -22,7 +22,7 @@ body {
 
 #header {
   background-image: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 80%), url("images/coffee.jpg");
-  background-size: 100%;
+  background-size: 50rem;
   background-repeat: no-repeat;
   background-clip: 100px;
 }
@@ -30,7 +30,7 @@ body {
 h1 {
   font-family: 'Lilita One', cursive;
   font-weight: 300;
-  font-size: 3em;
+  font-size: 3rem;
   line-height: 10px;
   color: rgb(30,30,30);
 }
@@ -38,7 +38,7 @@ h1 {
 h2 {
   font-weight: 200;
   color: rgb(60,60,60)
-  font-size: 2em;
+  font-size: 2rem;
   font-family: 'Roboto', sans-serif;
 }
 
