--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
   /*background-color: #aeaeae;*/
   font-family: 'Montserrat', sans-serif;
-  font-size: 1rem;
+  font-size: 1em;
 }
 .cards {
   width: 720px;
@@ -22,15 +22,15 @@ body {
 
 #header {
   background-image: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 80%), url("images/coffee.jpg");
-  background-size: 50rem;
+  background-size: 100%;
+  background-position: 0 0;
   background-repeat: no-repeat;
-  background-clip: 100px;
 }
 
 h1 {
   font-family: 'Lilita One', cursive;
   font-weight: 300;
-  font-size: 3rem;
+  font-size: 3em;
   line-height: 10px;
   color: rgb(30,30,30);
 }
@@ -38,7 +38,7 @@ h1 {
 h2 {
   font-weight: 200;
   color: rgb(60,60,60)
-  font-size: 2rem;
+  font-size: 2em;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -95,5 +95,11 @@ ul {
   padding-left: 0px;
   padding: 0px;
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 360px) {
+  #header{
+    font-size: 10px
+  }
 }
 
