--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 body {
   text-align: center;
   background: linear-gradient(to top, #aeaeae , rgba(0,0,0,0.4));
-
-  /*background-color: #aeaeae;*/
   font-family: 'Montserrat', sans-serif;
-  font-size: 1em;
+  font-size: 15px;
 }
 .cards {
   width: 720px;
@@ -22,7 +20,7 @@ body {
 
 #header {
   background-image: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 80%), url("images/coffee.jpg");
-  background-size: 100%;
+  background-size: cover;
   background-position: 0 0;
   background-repeat: no-repeat;
 }
@@ -30,7 +28,7 @@ body {
 h1 {
   font-family: 'Lilita One', cursive;
   font-weight: 300;
-  font-size: 3em;
+  font-size: 40px;
   line-height: 10px;
   color: rgb(30,30,30);
 }
@@ -38,7 +36,7 @@ h1 {
 h2 {
   font-weight: 200;
   color: rgb(60,60,60)
-  font-size: 2em;
+  font-size: 20px;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -96,10 +94,3 @@ ul {
   padding: 0px;
   margin-bottom: 10px;
 }
-
-@media screen and (max-width: 360px) {
-  #header{
-    font-size: 10px
-  }
-}
-
