--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@import url("components/avatar.css");
+@import url("components/button.css");
+@import url("components/list.css");
+@import url("components/profile-header.css");
+@import url("components/tabs.css");
 body {
   text-align: center;
   background: linear-gradient(to top, #aeaeae , rgba(0,0,0,0.4));
@@ -5,13 +10,27 @@ body {
   font-size: 15px;
 }
 .cards {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 720px;
   background-color: white;
-  padding: 10px;
+  padding: 5px 0px 5px 0px;
   border-radius: 4px;
   box-shadow: 2px 2px 3px rgba(0,0,0,0.4)
 }
 
+.card {
+  display: flex;
+  padding: 10px;
+
+}
+.card:hover {
+  transition: all 0.5s ease;
+  /*transform: scale(1.2);*/
+  margin-left: 20px;
+
+}
 .container {
   margin-left: 300px;
   width: 720px;
@@ -19,6 +38,9 @@ body {
 }
 
 #header {
+  box-shadow: 2px 2px 3px rgba(0,0,0,0.4);
+  border-radius: 3px;
+  padding: 10px;
   background-image: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 80%), url("images/coffee.jpg");
   background-size: cover;
   background-position: 0 0;
@@ -52,6 +74,7 @@ a {
 }
 
 a:hover {
+  transition: all 0.3s ease;
   color: #676082;
 }
 
@@ -66,8 +89,14 @@ ul {
   font-size: 40px;
 }
 .card_images {
-  height: 200px;
+  height: 100px;
+  margin-left: -20px;
   -webkit-mask-image:-webkit-gradient(linear, left top, right top, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
+}
+
+.card:hover .card_images {
+  transition: all 0.1s ease;
+  -webkit-mask-image:-webkit-gradient(linear, left top, right top, from(rgba(0,0,0,1)), to(rgba(0,0,0,1)));
 }
 
 #profile {
@@ -76,6 +105,11 @@ ul {
   box-shadow: 2px 2px 3px rgba(0,0,0,0.4);
 }
 
+#profile:hover {
+  transition: all 0.5s ease;
+  transform: scale(1.2);
+  box-shadow: 15px 10px 3px rgba(0,0,0,0.5);
+}
 #sidebar {
   background-color: rgba(0,0,0,0);
   position: fixed;
