--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ body {
   background-color: white;
   padding: 5px 0px 5px 0px;
   border-radius: 4px;
-  box-shadow: 2px 2px 3px rgba(0,0,0,0.4)
+  box-shadow: 2px 2px 3px rgba(0,0,0,0.4);
 }
 
 .card {
   display: flex;
   padding: 10px;
-
+  justify-content: center;
 }
 .card:hover {
   transition: all 0.5s ease;
@@ -127,4 +127,8 @@ ul {
   padding-left: 0px;
   padding: 0px;
   margin-bottom: 10px;
+}
+
+.card-body {
+  flex-grow: 1;
 }
